# runtime

./: .gitignore  CMakeLists.txt  README.md  polyblox  project_structure.txt
assets/: theme.json  theme.schema.json
enet-prefix/src/enet-build/: CMakeCache.txt  Makefile  cmake_install.cmake
enet-prefix/src/enet-stamp/: enet-source_dirinfo.txt
enet-prefix/tmp/: enet-cfgcmd.txt  enet-mkdirs.cmake
include/core/ecs/: find.hpp  kind.hpp  mask.hpp  type.hpp  world.hpp  zone.hpp
include/core/primitives/: matrix3.hpp  matrix4.hpp  quaternion.hpp  scalar.hpp  transform.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/core/types/components/: apperance.hpp  bounds.hpp  flow.hpp  input.hpp  interactable.hpp  range.hpp  rect.hpp  text.hpp  visibility.hpp
include/core/types/primitives/: matrix4.hpp  transform.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/ecs/: archetype.hpp  mask.hpp  query.hpp  types.hpp  world.hpp
include/gfx/lib/: context.hpp  queue.hpp
include/gfx/lib/assets/: font.hpp  glyph.hpp  mesh.hpp  shader.hpp  texture.hpp
include/gfx/lib/drivers/: device.hpp  directx.hpp  metal.hpp  payload.hpp  queue.hpp  shader.hpp  vulkan.hpp
include/graphics/: buffer.hpp  canvas.hpp  context.hpp  descriptor.hpp  mesh.hpp  pipeline.hpp  texture.hpp  vertex.hpp
include/math/: color3.hpp  color4.hpp  matrix3.hpp  matrix4.hpp  quaternion.hpp  scalar.hpp  transform.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/platform/: input.hpp  window.hpp
include/ui/: context.hpp  layout.hpp  motion.hpp  node.hpp  widget.hpp
include/ui/defs/: dimensions.hpp  geometry.hpp  layout.hpp  spacing.hpp  style.hpp  traits.hpp
include/ui/drivers/: directx.hpp  vulkan.hpp
include/ui/wrapper/: context.hpp  graphics.hpp  render.hpp
include/ui/wrapper/drivers/: metal.hpp
include/vm/: allocator.hpp  sandbox.hpp
include/vm/api/: api.hpp  ecs.hpp  math.hpp  primitives.hpp  ui.hpp
include/vm/core/: allocator.hpp  sandbox.hpp
luajit-prefix/src/luajit-stamp/: luajit-gitinfo.txt  luajit-update-info.txt
luajit-prefix/tmp/: luajit-gitclone.cmake  luajit-gitupdate.cmake  luajit-mkdirs.cmake
lws-prefix/src/lws-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  LibwebsocketsTargets.cmake  Makefile  cmake_install.cmake  install_manifest.txt  libwebsockets-config-version.cmake  libwebsockets-config.cmake  libwebsockets.pc  libwebsockets_static.pc
lws-prefix/src/lws-build/include/: libwebsockets.h
lws-prefix/src/lws-build/include/libwebsockets/: lws-adopt.h  lws-async-dns.h  lws-cache-ttl.h  lws-callbacks.h  lws-client.h  lws-conmon.h  lws-context-vhost.h  lws-cose.h  lws-display.h  lws-eventlib-exports.h  lws-fault-injection.h  lws-genaes.h  lws-genec.h  lws-genhash.h  lws-genrsa.h  lws-http.h  lws-jwe.h  lws-jwk.h  lws-jws.h  lws-lecp.h  lws-lejp.h  lws-logs.h  lws-misc.h  lws-netdev.h  lws-network-helper.h  lws-protocols-plugins.h  lws-retry.h  lws-secure-streams-client.h  lws-secure-streams-policy.h  lws-secure-streams.h  lws-sequencer.h  lws-service.h  lws-smd.h  lws-state.h  lws-system.h  lws-test-sequencer.h  lws-threadpool.h  lws-timeout-timer.h  lws-vfs.h  lws-write.h  (+4 more)
lws-prefix/src/lws-build/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/src/lws-build/lib/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/src/lws-build/lib/core-net/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/src/lws-build/lib/event-libs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/src/lws-build/lib/event-libs/poll/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/src/lws-build/lib/misc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/src/lws-build/lib/plat/unix/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/src/lws-build/lib/roles/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/src/lws-build/lib/roles/h1/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/src/lws-build/lib/roles/h2/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/src/lws-build/lib/roles/http/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/src/lws-build/lib/roles/listen/: Makefile  (+2 more)
lws-prefix/src/lws-build/lib/system/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/src/lws-build/lwsws/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/src/lws-build/plugins/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lws-prefix/tmp/: lws-cfgcmd.txt  lws-mkdirs.cmake
scripts/: main.lua
src/: layout.txt  main.cpp
src/core/ecs/: find.cpp  kind.cpp  world.cpp  zone.cpp
src/core/primitives/: matrix3.cpp  matrix4.cpp  quaternion.cpp  scalar.cpp  transform.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/core/types/primitives/: matrix3.cpp  matrix4.cpp  transform.cpp
src/ecs/: archetype.cpp  query.cpp  world.cpp
src/gfx/lib/: context.cpp  queue.cpp
src/gfx/lib/assets/: font.cpp  mesh.cpp  shader.cpp  texture.cpp
src/gfx/lib/drivers/: directx.cpp  metal.cpp  queue.cpp  vulkan.cpp
src/graphics/: buffer.cpp  context.cpp  descriptor.cpp  mesh.cpp  pipeline.cpp  texture.cpp  vertex.cpp
src/math/: color3.cpp  color4.cpp  matrix3.cpp  matrix4.cpp  quaternion.cpp  scalar.cpp  transform.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/platform/: input.cpp  window.cpp
src/ui/: context.cpp  input.cpp  layout.cpp  motion.cpp  node.cpp  widget.cpp
src/ui/defs/: input.cpp
src/ui/drivers/: directx.cpp  metal.mm  vulkan.cpp
src/ui/wrapper/: context.cpp  graphics.cpp  input.cpp  render.cpp
src/ui/wrapper/drivers/: directx.cpp  metal.mm  vulkan.cpp
src/vm/: allocator.cpp  sandbox.cpp
src/vm/api/: ecs.cpp  math.cpp  primitives.cpp  types.cpp  ui.cpp
src/vm/core/: allocator.cpp  sandbox.cpp
tests/: main.lua
uv-prefix/src/uv-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt  libuv-static.pc
uv-prefix/src/uv-stamp/: uv-source_dirinfo.txt
uv-prefix/tmp/: uv-cfgcmd.txt  uv-mkdirs.cmake
(+15 files in other folders)
